[package]
name = "recoreco"
description = "Fast item-to-item recommendations on the command line."
version = "0.1.1"
authors = ["Sebastian Schelter <ssc [at] apache [dot] org>"]
license = "GPL-3.0-or-later"

[[bin]]
name = "recoreco"
path = "src/bin/indicators.rs"

[dependencies]
csv = "1.0"
fnv = "1.0.5"
rand = "0.3.13"
num_cpus = "1.0"
scoped-pool = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
getopts = "0.2"